# fastapi_project

./: .gitignore  auth.py  blog.db  config.py  database.py  image_utils.py  main.py  models.py  pyproject.toml  schemas.py
routers/: posts.py  users.py
templates/: home.html  layout.html  post.html  user_post.html
